# foto_tpm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: console.rs  gui.rs  main.rs
