[package]
name = "foto_tre_pini"
version = "0.1.2"
authors = ["Michael Obvious <michele.palese42@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
json = "0.12.4"
ftp = "3.0.1"
strum = "0.25"
strum_macros = "0.25"
path-slash = "0.2"
chrono = "0.4"
walkdir = "2.5"

[dependencies.raylib]
version = "4.5.0"
git = "https://github.com/litten2up/raylib-rs"
branch = "4.5.0"