[package]
name = "foto_tre_pini"
version = "0.1.3"
authors = ["Michael Obvious <michele.palese42@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
ftp = "3.0.1"
image = "0.25"
json = "0.12"
path-slash = "0.2"
raylib = { version = "5.0" }
strum = "0.25"
strum_macros = "0.25"
walkdir = "2.5"